# centernet-ncnn

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt.old  demo.cpp  tags
src/cpp/: ncnn_centernet.cpp  ncnn_centernet.h
src/models/coco_res18_person/: res18.param
src/models/coco_res18_person_int8/: res18.param
